slingsby/static-src/sass/_musikk.scss
#toplist {
    border: none;

    tr {
        border: none;
    }

    td {
        border: none;
        background-color: #fff;
        padding: 2px;
    }

    .left {
        width:400px;
        vertical-align: middle;
    }

    .loading {
        display: inline-block;
        vertical-align: middle;
        height: 41px;
        width: 16px;
    }

    audio {
        width: 250px;
    }
}

.rating {
    width: 30px;
    border: 1px solid black;
    height: 10px;
    display: inline-block;
}

.rating-bar {
    background-color: rgb(1, 165, 21);
    height: 9px;
}

.multicolumn ul {
    float:left;
    list-style: none;
    padding-left: 0px;

    li {
        display: inline;
        width: 340px;

        ul {
            li {
                display: block;
            }
        }
    }

    a {
        text-decoration: none;
    }
}

#about-rating {
    clear: both;
    font-style: italic;
}

a.song_rating {
    text-decoration: none;
}

.song_vote_button {
    padding-bottom: 3px;
}

